manifest/standardnotes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server-self-hosted
        image: standardnotes/server
        env_file: .env
        ports:
          - containerPort: 3000
            hostPort: 3000
          - containerPort: 3104
            hostPort: 3125
        volumeMounts:
        - name: logs
          mountPath: /var/lib/server/logs
        - name: uploads
          mountPath: /opt/server/packages/files/dist/uploads
      volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: server-logs-pvc
      - name: uploads
        persistentVolumeClaim:
          claimName: server-uploads-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
      - name: localstack-self-hosted
        image: localstack/localstack:3.0
        expose:
          - port: 4566
        restartPolicy: Always
        volumeMounts:
        - name: localstack-bootstrap
          mountPath: /etc/localstack/init/ready.d/
      volumes:
      - name: localstack-bootstrap
        configMap:
          name: localstack-bootstrap-config

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db-self-hosted
        image: registry:docker.io/bitnami/mysql:8.4.1-debian-12-r3
        expose:
          - port: 3306
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
        - name: db-import
          mountPath: /docker-entrypoint-initdb.d/

      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: cache-self-hosted
        image: redis:6.0-alpine
        volumeMounts:
        - name: cache-data
          mountPath: /data
      volumes:
      - name: cache-data
        persistentVolumeClaim:
          claimName: cache-data-pvc

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: standardnotes-self-hosted
spec:
  podSelector:
    matchLabels:
      app: standardnotes-self-hosted
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: standardnotes-self-hosted
